--- a/Exerciese/Week2/Lesson5/Exercise1/style.css
+++ b/Exerciese/Week2/Lesson5/Exercise1/style.css
@@ -106,7 +106,7 @@ button:hover{
 }
 .footer{
 	padding: 75px;
-	background-color: #1f1f1f;
+	background-color: black;
 	line-height: 16px;
 	text-align: center;
 }
